Fix z-indexfor close button

--- a/public/testWHS2.css
+++ b/public/testWHS2.css
@@ -346,4 +346,5 @@ img.selected {
     background: #00000050;
     padding: 0.8vw 1vw;
     border-radius: 100%;
+    z-index: 999;
 }
